# fbr_fiscal_bridge

./: README.md  pyproject.toml
fbr_fiscal_bridge/: hooks.py  modules.txt
fbr_fiscal_bridge/events/: sales_invoice.py
fbr_fiscal_bridge/fbr_fiscal_bridge/api/: fbr_fiscal_component.py
fbr_fiscal_bridge/fbr_fiscal_bridge/doctype/fbr_fiscal_component_logs/: fbr_fiscal_component_logs.js  fbr_fiscal_component_logs.json  fbr_fiscal_component_logs.py  test_fbr_fiscal_component_logs.py
fbr_fiscal_bridge/fbr_fiscal_bridge/doctype/fbr_fiscal_component_settings/: fbr_fiscal_component_settings.js  fbr_fiscal_component_settings.json  fbr_fiscal_component_settings.py  test_fbr_fiscal_component_settings.py
fbr_fiscal_bridge/fbr_fiscal_bridge/print_format/pos_fbr_online/: pos_fbr_online.json
fbr_fiscal_bridge/fixtures/: custom_field.json
fbr_fiscal_bridge/overrides/: submit_invoice.py
fbr_fiscal_bridge/public/js/: sales_invoice.js
